tests/errors/syn_method18.java
public class syn_method18 {
public static int main ( {
 
}
}